[project]
name = "twitch_tester"
version = "0.1.0"
description = "python twitch test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marshmallow-dataclass>=8.7.1",
    "marshmallow>=4.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.2",
]
